@@ -1,0 +1,152 @@
+mkin version:    0.9.22 
+R version:       3.0.1 
+Date of fit:     Mon Oct 21 11:27:44 2013 
+Date of summary: Mon Oct 21 11:36:48 2013 
+
+Equations:
+[1] d_Z0 = - 0 - k_Z0_Z1 * Z0                             d_Z1 = + k_Z0_Z1 * Z0 - 0 - k_Z1_Z2 * Z1              d_Z2 = + k_Z1_Z2 * Z1 - k_Z2_sink * Z2 - k_Z2_Z3 * Z2 d_Z3 = + k_Z2_Z3 * Z2 - k_Z3_sink * Z3               
+
+Method used for solution of differential equation system:
+eigen 
+
+Weighting: none
+
+Starting values for optimised parameters:
+          value   type transformed
+Z0_0      100.0  state 100.0000000
+k_Z0_Z1     0.5 deparm  -0.6931472
+k_Z1_Z2     0.2 deparm  -1.6094379
+k_Z2_Z3     0.3 deparm  -1.2039728
+k_Z2_sink   0.1 deparm  -2.3025851
+k_Z3_sink   0.1 deparm  -2.3025851
+
+Fixed parameter values:
+     value  type
+Z1_0     0 state
+Z2_0     0 state
+Z3_0     0 state
+
+Optimised, transformed parameters:
+          Estimate Std. Error   Lower    Upper
+Z0_0       96.8400    2.05900 92.7100 101.0000
+k_Z0_Z1     0.7954    0.05332  0.6884   0.9025
+k_Z1_Z2    -0.7375    0.06123 -0.8604  -0.6146
+k_Z2_Z3    -1.5470    0.12250 -1.7930  -1.3010
+k_Z2_sink  -1.4330    0.17160 -1.7770  -1.0880
+k_Z3_sink  -2.8350    0.24360 -3.3240  -2.3470
+
+Backtransformed parameters:
+          Estimate    Lower    Upper
+Z0_0      96.84000 92.71000 101.0000
+k_Z0_Z1    2.21500  1.99100   2.4660
+k_Z1_Z2    0.47830  0.42300   0.5409
+k_Z2_Z3    0.21290  0.16650   0.2723
+k_Z2_sink  0.23870  0.16910   0.3368
+k_Z3_sink  0.05869  0.03599   0.0957
+
+Residual standard error: 4.1 on 51 degrees of freedom
+
+Chi2 error levels in percent:
+         err.min n.optim df
+All data   19.23       6 48
+Z0         17.45       2 15
+Z1         15.24       1 12
+Z2         20.32       2 10
+Z3         11.89       1 11
+
+Estimated disappearance times:
+      DT50   DT90
+Z0  0.3129  1.039
+Z1  1.4492  4.814
+Z2  1.5348  5.099
+Z3 11.8100 39.232
+
+Estimated formation fractions:
+            ff
+Z0_sink 1.0000
+Z0_Z1   1.0000
+Z1_sink 1.0000
+Z1_Z2   1.0000
+Z2_sink 0.5285
+Z2_Z3   0.4715
+Z3_sink 1.0000
+
+Parameter correlation:
+              Z0_0  k_Z0_Z1 k_Z1_Z2  k_Z2_Z3 k_Z2_sink k_Z3_sink
+Z0_0       1.00000  0.05387  0.2727 -0.07295   0.37006  -0.11348
+k_Z0_Z1    0.05387  1.00000 -0.0521 -0.03581   0.02442  -0.02521
+k_Z1_Z2    0.27275 -0.05210  1.0000 -0.12132   0.29384  -0.19144
+k_Z2_Z3   -0.07295 -0.03581 -0.1213  1.00000  -0.18887   0.55155
+k_Z2_sink  0.37006  0.02442  0.2938 -0.18887   1.00000  -0.64293
+k_Z3_sink -0.11348 -0.02521 -0.1914  0.55155  -0.64293   1.00000
+
+Data:
+    time variable observed   predicted   residual
+   0.000       Z0   100.00   9.684e+01  3.161e+00
+   0.040       Z0    81.70   8.863e+01 -6.926e+00
+   0.125       Z0    70.40   7.341e+01 -3.014e+00
+   0.290       Z0    51.10   5.094e+01  1.636e-01
+   0.540       Z0    41.20   2.927e+01  1.193e+01
+   1.000       Z0     6.60   1.057e+01 -3.966e+00
+   2.000       Z0     4.60   1.153e+00  3.447e+00
+   3.000       Z0     3.90   1.258e-01  3.774e+00
+   4.000       Z0     4.60   1.372e-02  4.586e+00
+   7.000       Z0     4.30   1.783e-05  4.300e+00
+  10.000       Z0     6.80   2.316e-08  6.800e+00
+  14.000       Z0     2.90   3.282e-12  2.900e+00
+  21.000       Z0     3.50   6.041e-19  3.500e+00
+  42.000       Z0     5.30   3.769e-39  5.300e+00
+  61.000       Z0     4.40   1.975e-57  4.400e+00
+  96.000       Z0     1.20   4.176e-91  1.200e+00
+ 124.000       Z0     0.70  4.796e-118  7.000e-01
+   0.000       Z1     0.00   1.421e-14 -1.421e-14
+   0.040       Z1    18.30   8.133e+00  1.017e+01
+   0.125       Z1    29.60   2.271e+01  6.894e+00
+   0.290       Z1    46.30   4.255e+01  3.755e+00
+   0.540       Z1    55.10   5.806e+01 -2.955e+00
+   1.000       Z1    65.70   6.308e+01  2.624e+00
+   2.000       Z1    39.10   4.598e+01 -6.879e+00
+   3.000       Z1    36.00   2.925e+01  6.750e+00
+   4.000       Z1    15.30   1.821e+01 -2.912e+00
+   7.000       Z1     5.60   4.341e+00  1.259e+00
+  10.000       Z1     1.10   1.034e+00  6.618e-02
+  14.000       Z1     1.60   1.526e-01  1.447e+00
+  21.000       Z1     0.60   5.364e-03  5.946e-01
+  42.000       Z1     0.25   2.330e-07  2.500e-01
+  61.000       Z1       NA   2.634e-11         NA
+  96.000       Z1       NA   1.413e-18         NA
+ 124.000       Z1       NA   2.158e-24         NA
+   0.000       Z2     0.00   4.547e-13 -4.547e-13
+   0.040       Z2       NA   7.873e-02         NA
+   0.125       Z2     0.25   7.041e-01 -4.541e-01
+   0.290       Z2     2.60   3.206e+00 -6.060e-01
+   0.540       Z2     3.80   8.697e+00 -4.897e+00
+   1.000       Z2    15.30   1.944e+01 -4.141e+00
+   2.000       Z2    37.20   3.345e+01  3.751e+00
+   3.000       Z2    31.70   3.534e+01 -3.640e+00
+   4.000       Z2    35.60   3.131e+01  4.289e+00
+   7.000       Z2    14.50   1.456e+01 -6.185e-02
+  10.000       Z2     0.80   5.301e+00 -4.501e+00
+  14.000       Z2     2.10   1.179e+00  9.213e-01
+  21.000       Z2     1.90   6.969e-02  1.830e+00
+  42.000       Z2     0.25   8.438e-06  2.500e-01
+  61.000       Z2       NA   1.895e-09         NA
+  96.000       Z2       NA   2.979e-16         NA
+ 124.000       Z2       NA   1.003e-21         NA
+   0.000       Z3     0.00  -4.974e-14  4.974e-14
+   0.040       Z3       NA   2.257e-04         NA
+   0.125       Z3       NA   6.442e-03         NA
+   0.290       Z3       NA   7.081e-02         NA
+   0.540       Z3       NA   3.793e-01         NA
+   1.000       Z3     0.25   1.741e+00 -1.491e+00
+   2.000       Z3     9.20   7.381e+00  1.819e+00
+   3.000       Z3    13.10   1.423e+01 -1.127e+00
+   4.000       Z3    22.30   2.036e+01  1.937e+00
+   7.000       Z3    28.40   3.017e+01 -1.773e+00
+  10.000       Z3    32.50   3.066e+01  1.844e+00
+  14.000       Z3    25.20   2.629e+01 -1.085e+00
+  21.000       Z3    17.20   1.787e+01 -6.746e-01
+  42.000       Z3     4.80   5.223e+00 -4.234e-01
+  61.000       Z3     4.50   1.713e+00  2.787e+00
+  96.000       Z3     2.80   2.196e-01  2.580e+00
+ 124.000       Z3     4.40   4.245e-02  4.358e+00
