@@ -210,6 +210,34 @@ f.w.man.irls <- mkinfit(SFO_SFO.ff, dw, err = "err.man",
                        reweight.method = "obs")
 summary(f.w.man.irls)
 
+# Test the new kinerrmin implementation {{{1
+LOD = 0.5
+FOCUS_2006_Z = data.frame(
+  t = c(0, 0.04, 0.125, 0.29, 0.54, 1, 2, 3, 4, 7, 10, 14, 21, 
+        42, 61, 96, 124),
+  Z0 = c(100, 81.7, 70.4, 51.1, 41.2, 6.6, 4.6, 3.9, 4.6, 4.3, 6.8, 
+         2.9, 3.5, 5.3, 4.4, 1.2, 0.7),
+  Z1 = c(0, 18.3, 29.6, 46.3, 55.1, 65.7, 39.1, 36, 15.3, 5.6, 1.1, 
+         1.6, 0.6, 0.5 * LOD, NA, NA, NA),
+  Z2 = c(0, NA, 0.5 * LOD, 2.6, 3.8, 15.3, 37.2, 31.7, 35.6, 14.5, 
+         0.8, 2.1, 1.9, 0.5 * LOD, NA, NA, NA),
+  Z3 = c(0, NA, NA, NA, NA, 0.5 * LOD, 9.2, 13.1, 22.3, 28.4, 32.5, 
+         25.2, 17.2, 4.8, 4.5, 2.8, 4.4))
+FOCUS_2006_Z_mkin <- mkin_wide_to_long(FOCUS_2006_Z)
+Z.FOCUS <- mkinmod(Z0 = list(type = "SFO", to = "Z1", sink = FALSE), 
+                   Z1 = list(type = "SFO", to = "Z2", sink = FALSE), 
+                   Z2 = list(type = "SFO", to = "Z3"),
+                   Z3 = list(type = "SFO"))
+
+m.Z.FOCUS <- mkinfit(Z.FOCUS, FOCUS_2006_Z_mkin, 
+                     parms.ini = c(k_Z0_Z1 = 0.5, k_Z1_Z2 = 0.2, k_Z2_Z3 = 0.3), 
+                     plot = TRUE)
+#capture.output(summary(m.Z.FOCUS), file = "summary_m.Z.FOCUS_0.9.20.txt")
+#capture.output(summary(m.Z.FOCUS), file = "summary_m.Z.FOCUS_0.9.22.txt")
+capture.output(summary(m.Z.FOCUS), file = "summary_m.Z.FOCUS_0.9.22a.txt")
+summary(m.Z.FOCUS, data = FALSE)
+
+
 # Test the GUI experiments {{{1
 library(gWidgetsWWW2)
 load_app("mkin/inst/GUI/simple.R")
